[gd_scene load_steps=4 format=3 uid="uid://dr0t27wrw5bn4"]

[ext_resource type="PackedScene" uid="uid://fl18upfqm2ey" path="res://Entity/EntityManager/FieldUI.tscn" id="1"]
[ext_resource type="Script" path="res://Camera.gd" id="2"]
[ext_resource type="Script" path="res://Entity/EntityManager/EntityManager.gd" id="12"]

[node name="EntityManager" type="Node2D"]
process_mode = 2
y_sort_enabled = true
position = Vector2(216, 259)
script = ExtResource("12")

[node name="FieldUI" parent="." instance=ExtResource("1")]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2")

[connection signal="field_menu_closed" from="FieldUI" to="." method="_on_FieldUI_field_menu_closed"]
[connection signal="get_next_leader" from="FieldUI" to="." method="get_next_leader"]
